# ComfyUI-Curve

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  nodes.py.new  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: __init__.py
nodes/.ipynb_checkpoints/: __init__-checkpoint.py
nodes/analysis/: __init__.py  histogram.py
nodes/camera_raw/: __init__.py  enhance.py  tone_curve.py
nodes/core/: __init__.py  api_handler.py  base_node.py  generic_preset_manager.py  mask_utils.py  preset_manager.py
nodes/effects/: __init__.py  gaussian_blur.py
nodes/lightroom/: __init__.py  color_grading.py
nodes/lightroom/.ipynb_checkpoints/: color_grading-checkpoint.py
nodes/photoshop/: __init__.py  curve.py  hsl-Copy1.py  hsl.py  levels.py
nodes/presets/: __init__.py  curve_preset.py
presets/camera_raw/default/: landscape_clarity.json  portrait_enhance.json  soft_vintage.json
presets/color_grading/default/: cinematic_orange_teal.json  cool_blue_mood.json  (+1 more)
presets/default/: cinematic.json  landscape_vivid.json  portrait_enhance.json
presets/user/: 7bc73bc9-1da0-4a59-8b8a-2b876a3cdb53.json  8812081b-0e72-47ad-8d46-d4cb48380e72.json  ac292359-2b30-4ff1-9b61-63f17c108d61.json
web/: CameraRawEnhanceNode.js  CameraRawToneCurveNode.js  CameraRawToneCurveNode.js.backup  ColorGradingNode.js  CurvePresetNode.js  HistogramAnalysisNode.js  PhotoshopCurveNode.js  PhotoshopHSLNode.js  PhotoshopHistogramNode.js  PhotoshopLevelsNode.js  PhotoshopLevelsNode_backup_20250617_201213.js
web/.ipynb_checkpoints/: CurvePresetNode-checkpoint.js
(+5 files in other folders)
